--- a/src/components/Weatherinformations5Days.css
+++ b/src/components/Weatherinformations5Days.css
@@ -1,36 +1,34 @@
-.weather-container {
+.forecast-container {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
-    padding: 20px;
-    margin: 20px 0;
+
 }
 
-h2 {
-    font-size: 2rem;
+h3 {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
 }
 
-.weather-info {
+.weather-list {
+
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
-.temperature {
-    font-weight: bold;
-    font-size: 2.5rem;
+.weather-item {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+    padding: 10px;
+
 }
 
-img {
-    width: 80px;
-}
-
-.description {
+.forecast-description,
+.forecast-day {
     text-transform: capitalize;
-    font-size: 1.3rem;
-    margin-bottom: 10px;
-}
+    font-size: 1.1rem;
 
-.details {
-    display: flex;
-    justify-content: space-evenly;
 }
