--- a/src/components/Weatherinformations5Days.css
+++ b/src/components/Weatherinformations5Days.css
@@ -1,6 +1,6 @@
 .forecast-container {
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 10px;
+    background-color: rgba(238, 219, 219, 0.822);
+    border-radius: 20px ;
 
 }
 
@@ -10,19 +10,21 @@ h3 {
 }
 
 .weather-list {
-
+    
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
+    border: 20px;
 }
 
 .weather-item {
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 10px;
-    padding: 10px;
+    background-color: rgba(238, 219, 219, 0.822);
+    border-radius: 20px;
+    padding: 1vh;
+    margin-bottom: 5vh;
 
 }
 
