--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    background: linear-gradient(to right, #00b4db, #0083b0);
+    background: linear-gradient(to right, #677b80, #1c353d);
     color: #333;
     line-height: 1.6;
 }
